# hr-service

./: .dockerignore  .editorconfig  .env  .env.example  .flake8  .pylintrc  API_DOCUMENTATION.md  CLEANUP_GUIDE.md  DOCKER_OPTIMIZATION.md  Dockerfile  Dockerfile.dev  Dockerfile.restructured  LOCAL_DEVELOPMENT.md  PROJECT_STRUCTURE.md  README.md  README_RESTRUCTURED.md  celery_app.py  check_redis.py  database.db  database.py  docker-compose.yml  docker-start.sh  llm.py  main.py  main_new.py  models.py  pyproject.toml  requirements.txt  setup.cfg  start_worker.py  tasks.py  workers.py
docs/: STUDY_CASE_SUBMISSION.md  case study brief.md  case_study_text.txt  extraction case study.md
docs/ingestion/: ingest-docs.html  ingest-docs.md
samples/html/: cv_1_john_doe.html  (+5 more)
scripts/: test_api.sh
tests/: README_CONSOLIDATED.md  docker-simple-worker.md  test_complete_api.py  test_cv_content.txt  test_cv_simple.txt  test_direct_evaluation.py  test_evaluation.py  test_fixed_ai.py  test_gemini_direct.py  test_ingest.txt  test_instructor_gemini.py  test_report.txt  test_scenarios.py
uploads/: cv_20251106212344_cv_1_john_doe.txt  cv_20251106213230_cv_2_sarah_wilson.txt  cv_20251107233627_test_cv.txt.txt  cv_20251108004245_test_cv.txt.txt  cv_20251108152844_CV_-_Muhammad_Insan_Kamil_2025.pdf.txt  cv_20251108184656_test_cv.txt  report_20251106212344_project_report_1_excellent.txt  report_20251106213230_project_report_2_good.txt  report_20251108184303_report_20251108090210_AI-Powered_HR_Service_-_Implementation_Report.pdf.txt  report_20251108184656_test_report.txt.txt
(+21 files in other folders)
