[metadata]
name = "hr-service"
version = "1.2.0"
author = "HR Service Team"

[options]
packages = find:
    where = ["src"]
include = ["*"]
exclude = ["tests*", "test_*"]

[options.packages.find]
exclude = ["tests", "test_*"]

[options.extras_require]
dev = pytest>=6.0, pytest-cov>=2.10, black>=22.0, flake8>=4.0, mypy>=0.900, isort>=5.0, pre-commit>=2.15
test = pytest>=6.0, pytest-cov>=2.10, pytest-mock>=3.6, pytest-asyncio>=0.18

[options.entry_points]
console_scripts =